src/index.css
:root {
  color-scheme: light dark;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
  min-height: 100vh;
  width: 100%;
  font-family: 'Open Sans', sans-serif;
  text-align: center;
  overflow-y: scroll !important;
  overflow-x: hidden !important;
  position: 'relative';
}

@keyframes slideCloud1 {
  from {
    left: -150vw;
  }

  to {
    left: 250vw;
  }
}

@keyframes floatCloud1 {
  0% {
    transform: translateY(-50px);
  }
  25% {
    transform: translateY(-20px);
  }
  50% {
    transform: translateY(50px);
  }
  75% {
    transform: translateY(-30px);
  }
  100% {
    transform: translateY(-50px);
  }
}

@keyframes bird {
  0% {
    transform: translateY(-20px) translateX(0vw) scaleX(1);
  }
  25% {
    transform: translateY(-150px) translateX(75vw) scaleX(01);
  }
  50% {
    transform: translateY(-240px) translateX(80vw) scaleX(1);
  }
  70% {
    transform: translateY(-220px) translateX(85vw) scaleX(1);
  }
  75% {
    transform: translateY(-175px) translateX(66vw) scaleX(-1);
  }
  95% {
    transform: translateY(-18px) translateX(-1vw) scaleX(-1);
  }
  100% {
    transform: translateY(-20px) translateX(0vw) scaleX(1);
  }
}

